# IMFavorites

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  acconfig.h  autogen.sh  configure.in  generate  imfavorites.glade  imfavorites.gladep  imfavorites.kdevelop
pixmaps/: Makefile.am  cdaudio_umount.svgz  cdrom_umount.svgz  dvd_umount.svgz  poundsign.svgz
po/: ChangeLog  POTFILES.in
src/: Makefile  Makefile.am  Makefile.in  doneDialog.cc  doneDialog.h  doneDialog_glade.cc  doneDialog_glade.h  fileSelection.cc  fileSelection.h  fileSelection_glade.cc  fileSelection_glade.h  gimfavorites.cc  imfavorites.cc  imfavorites_engine.cpp  imfavorites_engine.h  mainWindow.cc  mainWindow.h  mainWindow_glade.cc  mainWindow_glade.h  options.cpp  options.h  sqlite_db.cpp  sqlite_db.h
tools/: xmms-enqueue-favorites
