# generated 2004/4/6 16:25:12 EDT by pug@resmiranda.berthall.com.(none)
# using glademm V2.0.0.1

AC_INIT(src/imfavorites.cc)
AM_INIT_AUTOMAKE(imfavorites, 0.4)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

dnl *************************************************
dnl gettext support
dnl *************************************************

GETTEXT_PACKAGE=imfavorites
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GNU_GETTEXT

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

AC_LANG_CPLUSPLUS

PKG_CHECK_MODULES(GTKMM,[gtkmm-2.0 >= 2.2.0])
AC_SUBST(GTKMM_CFLAGS)
AC_SUBST(GTKMM_LIBS)

AC_CHECK_LIB(sqlite, sqlite_open,, [with_sqlite=no])
AC_CHECK_HEADERS(sqlite.h,, [with_sqlite=no])
if test "$with_sqlite" = "no"; then
   AC_MSG_ERROR([sqlite required and missing.])
fi

AC_OUTPUT(Makefile src/Makefile po/Makefile.in m4/Makefile pixmaps/Makefile)
