# generated 2004/4/6 16:25:12 EDT by pug@resmiranda.berthall.com.(none)
# using glademm V2.0.0.1

AC_INIT(src/imfavorites.cc)
AM_INIT_AUTOMAKE(imfavorites, 1.0)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL


AC_ARG_WITH(gtkmm,
[  --with-gtkmm          build GTK GUI],, [with_gtkmm=yes])
AC_ARG_WITH(gtkmm,
[  --without-gtkmm       do not build GTK GUI],, [with_gtkmm=no])
AC_ARG_WITH(taglib,
[  --with-taglib         use TagLib],, [with_taglib=yes])
AC_ARG_WITH(taglib,
[  --without-taglib      do not use TagLib (disable length limiting)],, [with_taglib=no])

dnl *************************************************
dnl gettext support
dnl *************************************************

GETTEXT_PACKAGE=imfavorites
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

dnl Add the languages which your application supports here.
dnl ALL_LINGUAS=""
dnl AM_GNU_GETTEXT

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

AC_LANG_CPLUSPLUS

dnl Check for GTKMM

if test "x$with_gtkmm" = "xyes"; then
        PKG_CHECK_MODULES(GTKMM,[gtkmm-2.0 >= 2.2.0],AC_DEFINE([GTKMM_IS_PRESENT],,[Define to 1 if GTKMM is installed]),
        AC_MSG_ERROR([GTKMM-2.X Not Found. Use --without-gtkmm  to build only the console IMFavorites.]))

        AC_SUBST(GTKMM_CFLAGS)
        AC_SUBST(GTKMM_LIBS)
fi

dnl Check for SQLite

AC_CHECK_LIB(sqlite, sqlite_open,, [with_sqlite=no])
AC_CHECK_HEADERS(sqlite.h,, [with_sqlite=no])

if test "x$with_sqlite" = "xno"; then
        AC_MSG_ERROR([sqlite required and missing.])
fi

dnl Check for TagLib

if test "x$with_taglib" = "xyes"; then
dnl    AC_CHECK_LIB(libtag,Tag::Tag(),, [with_taglib=no])
    AC_CHECK_HEADERS(taglib/taglib.h,, [with_taglib=no])
fi

if test "x$with_taglib" = "xno"; then
    AC_MSG_RESULT([TagLib Not Found. Song length limiting will not work.])
fi


dnl Make Makefiles
AM_CONDITIONAL(BUILD_GIMFAVORITES, test "x$with_gtkmm" = "xyes")
AM_CONDITIONAL(WITH_TAGLIB, test "x$with_taglib" = "xyes")

AC_OUTPUT(Makefile
        src/Makefile \
        po/Makefile.in \
        m4/Makefile \
        pixmaps/Makefile \
        tools/Makefile)
